tests/invalid/ho_2.exp
ho_2.p:19: Type error: '`a' and '`b' are not the same
